kubernetes/apps/rook-ceph/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
spec:
  hostnames:
  - ceph.${SECRET_DOMAIN}
  parentRefs:
  - name: internal
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 7000
